--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body style="height: 100%; margin: 0; overflow: hidden">
 <iframe src="https://firegamesite.com/" style="width: 100%; height: 100%; border: none" />
+
+<script>
+	window.addEventListener('beforeunload', (event) => {
+		event.returnValue = "Tab is attempting to close. Are you sure you want to leave?"
+	})
+</script>
 </body>
 </html>
