--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <title>Home | Schoology</title>
     <link rel="shortcut icon" href="https://asset-cdn.schoology.com/sites/all/themes/schoology_theme/favicon.ico" type="image/x-icon">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2261681163241464"
+            crossorigin="anonymous"></script>
 </head>
 <body style="height: 100%; margin: 0; overflow: hidden">
 <iframe src="https://firegamesite.com/" style="width: 100%; height: 100%; border: none" />
+<script type="module">
+	// Import the functions you need from the SDKs you need
+	import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+	import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-analytics.js";
+	// TODO: Add SDKs for Firebase products that you want to use
+	// https://firebase.google.com/docs/web/setup#available-libraries
+
+	// Your web app's Firebase configuration
+	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+	const firebaseConfig = {
+		apiKey: "AIzaSyBdfHzMhtL_-3jvAMpUPK0kbTvCfXStNjI",
+		authDomain: "fire-game-site.firebaseapp.com",
+		projectId: "fire-game-site",
+		storageBucket: "fire-game-site.appspot.com",
+		messagingSenderId: "426518622424",
+		appId: "1:426518622424:web:acd327432592a1ace1e7ad",
+		measurementId: "G-7M4MZKJPG7"
+	};
+
+	// Initialize Firebase
+	const app = initializeApp(firebaseConfig);
+	const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
