--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <iframe src="https://firegamesite.com/" style="width: 100%; height: 100%; border: none" />
 <script type="module">
 	// Import the functions you need from the SDKs you need
-	import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-	import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-analytics.js";
+	import { initializeApp } from "firebase/app";
+	import { getAnalytics } from "firebase/analytics";
 	// TODO: Add SDKs for Firebase products that you want to use
 	// https://firebase.google.com/docs/web/setup#available-libraries
 
 	// Your web app's Firebase configuration
 	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 	const firebaseConfig = {
-		apiKey: "AIzaSyBdfHzMhtL_-3jvAMpUPK0kbTvCfXStNjI",
-		authDomain: "fire-game-site.firebaseapp.com",
-		projectId: "fire-game-site",
-		storageBucket: "fire-game-site.appspot.com",
-		messagingSenderId: "426518622424",
-		appId: "1:426518622424:web:acd327432592a1ace1e7ad",
-		measurementId: "G-7M4MZKJPG7"
+		apiKey: "AIzaSyApKii83U6VqtDhnb9rbyY6QrOuGBHpvvk",
+		authDomain: "flamingsite.firebaseapp.com",
+		projectId: "flamingsite",
+		storageBucket: "flamingsite.appspot.com",
+		messagingSenderId: "79390094528",
+		appId: "1:79390094528:web:2d950704f6b92f3b0ba925",
+		measurementId: "G-133ZC2BH43"
 	};
 
 	// Initialize Firebase
