--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	// Add an event listener for the forward slash key
 	document.addEventListener('keydown', function(event) {
-	  if (event.key === '/') {
+	  if (event.code === 'Slash') {
 		  window.location.href = 'https://docs.google.com/';
 		}
 	  }
