hopefully fixed panic button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	const analytics = getAnalytics(app);
 
 	// Add an event listener for the forward slash key
-	document.addEventListener('keydown', function(event) {
+	document.addEventListener('onkeydown', function(event) {
 	  if (event.code === 'Slash') {
 		  window.location.href = 'https://docs.google.com/';
 		}
