i swear if this doesn't work (SIGH)

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
 	const app = initializeApp(firebaseConfig);
 	const analytics = getAnalytics(app);
 
-	// Add an event listener for the forward slash key
+</script>
+<script>
 	document.addEventListener('onkeydown', event => {
 	  if (event.code === 'Slash') {
 		  window.location.href = 'https://docs.google.com/';
 	  }
-	})
+	}) 
 </script>
 </body>
 </html>
